# LightDSA

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
AE/: clear.sh  env_init.sh  reproduce.sh
AE/ATCexplore/: dsa_conf_naiveDSA.hpp  env_init.sh  perfDSA.py  step1.sh  step2.sh  step3.sh  step4.sh  step5.sh
AE/figure1/: CPU.txt  LightDSA.txt  figure1.py  naiveDSA.txt  runner.sh  speed_data.txt
AE/figure11/: LightDSA.txt  data.txt  figure11.py  naiveDSA.txt  runner.sh
AE/figure12/: CPU.txt  LightDSA.txt  data.txt  dsa_conf_LightDSA.hpp  dsa_conf_naiveDSA.hpp  figure12.py  naiveDSA.txt  runner.sh
AE/figure13/: figure13.py  runner.sh
AE/figure15/: dsa_conf_DRDBK.hpp  dsa_conf_noDRDBK.hpp  figure15.py  runner.sh
AE/figure3/: compare_random.txt  compare_sequential.txt  compval_random.txt  compval_sequential.txt  cpu_data.txt  dsa_data.txt  figure3.py  memfill_random.txt  memfill_sequential.txt  memmove_random.txt  memmove_sequential.txt  runner.sh
AE/figure4/: CPU.txt  LightDSA.txt  data.txt  dsa_conf_LightDSA.hpp  dsa_conf_naiveDSA.hpp  figure4.py  naiveDSA.txt  runner.sh
AE/figure5/: all_results.txt  dsa_conf_naiveDSA.hpp  figure5.py  pf_type_data.txt  runner.sh
AE/figure6/: data.txt  dsa_conf_withPRS.hpp  figure6.py  runner.sh
AE/figure7/: dsa_conf_DRDBK.hpp  figure7.py  no_DRDBK.txt  no_DRDBK_data.txt  runner.sh  with_DRDBK.txt  with_DRDBK_data.txt
AE/figure7ex/: figure7ex.py  runner.sh
AE/figure8/: batch_memcpy.txt  data.txt  dsa_conf_naiveDSA.hpp  figure8.py  runner.sh  sg64_memcpy.txt
AE/figure9/: data.txt  dsa_conf_naiveDSA.hpp  figure9.py  ooo_test.txt  runner.sh
cmake/: FindPmem.cmake
demo/: CMakeLists.txt  allocator_test.cpp  c_demo.c  coro_demo.cpp  mergesort_demo.cpp  pmem_demo.cpp  speedtest_compval.cpp  speedtest_memfill.cpp  speedtest_memmove.cpp  vector_demo.cpp
example/: CMakeLists.txt  c_demo.c  c_example.c  coro_demo.cpp  example_c.c  example_cpp.cpp  mergesort_demo.cpp  pmem_demo.cpp
expr/: CMakeLists.txt  dedicated_remap.cpp  page_fault_speed.cpp
expr/align/: CMakeLists.txt  align_for_speed.cpp
expr/cache/: CMakeLists.txt  diff_desc_diff_mem.cpp  diff_desc_noop.cpp  diff_desc_s_src_d_dst.cpp  diff_desc_same_mem.cpp  same_desc_diff_mem.cpp
expr/others/: mutex_test.cpp
expr/paper/: CMakeLists.txt
expr/paper/chapter1_Motivation/: CMakeLists.txt  motivation.cpp  motivation_no_opt.data  motivation_no_opt_16K.data  motivation_opt_16K.data  motivation_opt_8K.data  motivation_speed_test.cpp  speed_test_no_opt.data  speed_test_opt.data
expr/paper/chapter2_3_DSAperf/: CMakeLists.txt  DSA_speed.cpp  DSA_speed_rand.data  DSA_speed_seq.data
expr/paper/chapter3_1_ATC/: CMakeLists.txt  batch_noop_memmove.cpp  diff_desc_diff_mem.cpp  diff_desc_noop.cpp  diff_desc_s_src_d_dst.cpp  diff_desc_same_mem.cpp  same_desc_diff_mem.cpp
expr/paper/chapter3_2_PF/: CMakeLists.txt  huge_page_fault.cpp  page_fault_memmove_speed.cpp  page_fault_speed.data  page_tapping.cpp  tapping_bof.data  tapping_no_bof.data
expr/paper/chapter3_3_PIPE/: CMakeLists.txt  pipeline_mc.cpp  pipeline_mc_plus.cpp  pipeline_mc_plus_inbatch.cpp
expr/paper/chapter3_4_ALIGN/: CMakeLists.txt  alignment_speed.cpp  autorun.sh
expr/paper/chapter3_4_ALIGN/data/: batch_compare.data  batch_compval.data  batch_memcpy.data  batch_memfill.data  sg32_compare.data  sg32_compval.data  sg32_memcpy.data  sg32_memfill.data  sg64_compare.data  sg64_compval.data  sg64_memcpy.data  sg64_memfill.data  single_compare.data  single_compval.data  single_memcpy.data  single_memfill.data
expr/paper/chapter3_5_OOO/: CMakeLists.txt  ooo.data  ooo_test.cpp  ooo_write_check.cpp
expr/paper/chapter5_1_pagemig/: CMakeLists.txt  lightDSA.data  naive.data  page_mig_dsa.cpp
expr/paper/chapter5_1_shuffle/: CMakeLists.txt  naive_dsa.data  our_dsa.data  per_cpu.data  shuffle_dsa.cpp
expr/paper/chapter5_1_vector/: +lib+design.data  -PRS.data  CMakeLists.txt  naive.data  vector_dsa.cpp
expr/pipeline/: CMakeLists.txt  engine_ooo.cpp  in_batch_pipe.cpp  trans_pipe.cpp
others/: iaa.sh  mutex_test.cpp  test  test.cpp
scripts/: _test_iio_iotlb.sh  autorun_trans_pipe.sh  flame_graph.sh  perf_PIPE.py  perf_RW.py  setup_pmem_disk.sh
src/: async_dsa.hpp  async_dsa_c.h  lightdsa.hpp  lightdsa_c.h
src/details/: dsa_agent.cpp  dsa_agent.hpp  dsa_allocator.cpp  dsa_allocator.hpp  dsa_batch_redistribute.cpp  dsa_batch_redistribute.hpp  dsa_batch_task.cpp  dsa_batch_task.hpp  dsa_conf.hpp  dsa_constant.hpp  dsa_cpupath.cpp  dsa_cpupath.hpp  dsa_pure_batch_task.cpp  dsa_pure_batch_task.hpp  dsa_task.cpp  dsa_task.hpp  dsa_util.cpp  dsa_util.hpp  util.cpp  util.hpp
src/interfaces/: dsa_batch.cpp  dsa_batch.hpp  dsa_batch_c.cpp  dsa_batch_c.h  dsa_memcpy.cpp  dsa_memcpy.hpp  dsa_memcpy_c.cpp  dsa_memcpy_c.h  dsa_op.cpp  dsa_op.hpp  dsa_op_c.cpp  dsa_op_c.h
tmp/: a.out  pmem_test  pmem_test.cpp
tools/: readbar  readbar.cpp  shuffle_speed  shuffle_speed.cpp
