# compile codes for
#   In-Depth Exploration of DSA features
#     -> Address Translation Mechanisms
add_subdirectory( chapter3_1_ATC/ )

# compile codes for
#   In-Depth Exploration of DSA features
#     -> Page Fault Handling
add_subdirectory( chapter3_2_PF/ )

# compile codes for
#   In-Depth Exploration of DSA features
#     -> Pipeline Mechanisms
add_subdirectory( chapter3_3_PIPE/ )

# compile codes for
#   In-Depth Exploration of DSA features
#     -> Write Address Alignment
add_subdirectory( chapter3_4_ALIGN/ )